--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "coverage": "NODE_ENV=test istanbul cover node_modules/.bin/_mocha -- -- test/**/*.test.js"
   },
   "dependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
     "body-parser": "~1.16.0",
     "compression": "^1.6.2",
     "cookie-parser": "~1.4.3",
@@ -20,8 +21,10 @@
     "debug": "~2.6.0",
     "express": "~4.14.1",
     "express-session": "^1.15.2",
+    "express-vue": "^5.0.0-alpha3",
     "fast-csv": "^2.4.1",
     "feedr": "^2.13.5",
+    "gulp-vueify": "0.0.3",
     "handlebars-layouts": "^3.1.4",
     "handlebars-wax": "^5.1.1",
     "hbs": "~4.0.1",
